--- a/LeComCre.Web/LeComCre.Web/MasterColorir.master
+++ b/LeComCre.Web/LeComCre.Web/MasterColorir.master
@@ -96,28 +96,28 @@
         </tr>
         <tr>
             <td rowspan="2" colspan="6">
-                <img name="colorir_r2_c1" src="images/colorir_r2_c1.gif" width="230" height="75" border="0"
-                    id="colorir_r2_c1" alt="" />
+                <a href="Default.aspx"><img name="colorir_r2_c1" src="images/colorir_r2_c1.gif" width="230" height="75" border="0"
+                    id="colorir_r2_c1" alt="LéComCré" /></a>
             </td>
             <td colspan="6">
                 <img name="colorir_r2_c7" src="images/colorir_r2_c7.gif" width="262" height="47" border="0"
                     id="colorir_r2_c7" alt="" />
             </td>
             <td>
-                <img name="colorir_r2_c13" src="images/colorir_r2_c13.gif" width="134" height="47" border="0"
-                    id="colorir_r2_c13" alt="" />
+                <a href="QuemSomos.aspx"><img name="colorir_r2_c13" src="images/colorir_r2_c13.gif" width="134" height="47" border="0"
+                    id="colorir_r2_c13" alt="Quem somos" /></a>
             </td>
             <td colspan="3">
-                <img name="colorir_r2_c14" src="images/colorir_r2_c14.gif" width="150" height="47" border="0"
-                    id="colorir_r2_c14" alt="" />
+                <a href="acessebilidade.aspx"><img name="colorir_r2_c14" src="images/colorir_r2_c14.gif" width="150" height="47" border="0"
+                    id="colorir_r2_c14" alt="Acessebilidade" /></a>
             </td>
             <td colspan="3">
-                <img name="colorir_r2_c17" src="images/colorir_r2_c17.gif" width="127" height="47" border="0"
-                    id="colorir_r2_c17" alt="" />
+                <a href="Cadastrar.aspx"><img name="colorir_r2_c17" src="images/colorir_r2_c17.gif" width="127" height="47" border="0"
+                    id="colorir_r2_c17" alt="Cadastra-se" /></a>
             </td>
             <td colspan="3">
-                <img name="colorir_r2_c20" src="images/colorir_r2_c20.gif" width="98" height="47" border="0"
-                    id="colorir_r2_c20" alt="" />
+                <a href="email.aspx"><img name="colorir_r2_c20" src="images/colorir_r2_c20.gif" width="98" height="47" border="0"
+                    id="colorir_r2_c20" alt="Contato" /></a>
             </td>
             <td rowspan="11">
                 <img name="colorir_r2_c23" src="images/colorir_r2_c23.gif" width="23" height="758" border="0"
@@ -155,32 +155,32 @@
                     id="colorir_r5_c1" alt="" />
             </td>
             <td rowspan="4" colspan="4">
-                <img name="colorir_r5_c6" src="images/colorir_r5_c6.gif" width="146" height="94" border="0"
-                    id="colorir_r5_c6" alt="" />
+                <a href="Colorir.aspx"><img name="colorir_r5_c6" src="images/colorir_r5_c6.gif" width="146" height="94" border="0"
+                    id="colorir_r5_c6" alt="Colorir" /></a>
             </td>
             <td rowspan="4">
                 <img name="colorir_r5_c10" src="images/colorir_r5_c10.gif" width="51" height="94" border="0"
                     id="colorir_r5_c10" alt="" />
             </td>
             <td rowspan="4">
-                <img name="colorir_r5_c11" src="images/colorir_r5_c11.gif" width="84" height="94" border="0"
-                    id="colorir_r5_c11" alt="" />
+                <a href="Assuntos.aspx"><img name="colorir_r5_c11" src="images/colorir_r5_c11.gif" width="84" height="94" border="0"
+                    id="colorir_r5_c11" alt="Forum" /></a>
             </td>
             <td rowspan="4">
                 <img name="colorir_r5_c12" src="images/colorir_r5_c12.gif" width="30" height="94" border="0"
                     id="colorir_r5_c12" alt="" />
             </td>
             <td rowspan="4" colspan="2">
-                <img name="colorir_r5_c13" src="images/colorir_r5_c13.gif" width="150" height="94" border="0"
-                    id="colorir_r5_c13" alt="" />
+                <a href="Temas.aspx"><img name="colorir_r5_c13" src="images/colorir_r5_c13.gif" width="150" height="94" border="0"
+                    id="colorir_r5_c13" alt="Temas" /></a>
             </td>
             <td rowspan="4">
                 <img name="colorir_r5_c15" src="images/colorir_r5_c15.gif" width="24" height="94" border="0"
                     id="colorir_r5_c15" alt="" />
             </td>
             <td rowspan="4" colspan="2">
-                <img name="colorir_r5_c16" src="images/colorir_r5_c16.gif" width="142" height="94" border="0"
-                    id="colorir_r5_c16" alt="" />
+                <a href="Chat.aspx"><img name="colorir_r5_c16" src="images/colorir_r5_c16.gif" width="142" height="94" border="0"
+                    id="colorir_r5_c16" alt="Batepapo" /></a>
             </td>
             <td rowspan="2" colspan="5">
                 <img name="colorir_r5_c18" src="images/colorir_r5_c18.gif" width="193" height="27" border="0"
@@ -196,8 +196,8 @@
                     id="colorir_r6_c1" alt="" />
             </td>
             <td rowspan="2" colspan="3">
-                <img name="colorir_r6_c2" src="images/colorir_r6_c2.gif" width="126" height="67" border="0"
-                    id="colorir_r6_c2" alt="" />
+                <a href="jogos.aspx"><img name="colorir_r6_c2" src="images/colorir_r6_c2.gif" width="126" height="67" border="0"
+                    id="colorir_r6_c2" alt="Jogos" /></a>
             </td>
             <td rowspan="3">
                 <img name="colorir_r6_c5" src="images/colorir_r6_c5.gif" width="23" height="73" border="0"
@@ -213,8 +213,8 @@
                     id="colorir_r7_c18" alt="" />
             </td>
             <td rowspan="2" colspan="3">
-                <img name="colorir_r7_c19" src="images/colorir_r7_c19.gif" width="148" height="67" border="0"
-                    id="colorir_r7_c19" alt="" />
+                <a href="email.aspx"><img name="colorir_r7_c19" src="images/colorir_r7_c19.gif" width="148" height="67" border="0"
+                    id="colorir_r7_c19" alt="Anuncie" /></a>
             </td>
             <td rowspan="2">
                 <img name="colorir_r7_c22" src="images/colorir_r7_c22.gif" width="14" height="67" border="0"
@@ -271,17 +271,23 @@
                 <img name="colorir_r10_c1" src="images/colorir_r10_c1.gif" width="46" height="201" border="0"
                     id="colorir_r10_c1" alt="" />
             </td>
-            <td rowspan="2" colspan="5">
-                <img name="colorir_r10_c3" src="images/colorir_r10_c3.gif" width="208" height="441" border="0"
-                    id="colorir_r10_c3" alt="" />
+            <td rowspan="2" colspan="5" style="background-color: White; text-align: justify; vertical-align: top;"
+                align="justify" valign="top">
+                <div id="textoDireito">
+                    <asp:ContentPlaceHolder ID="MenuDireito" runat="server">
+                    </asp:ContentPlaceHolder>
+                </div>
             </td>
             <td>
                 <img name="colorir_r10_c8" src="images/colorir_r10_c8.gif" width="53" height="201" border="0"
                     id="colorir_r10_c8" alt="" />
             </td>
-            <td rowspan="2" colspan="12">
-                <img name="colorir_r10_c9" src="images/colorir_r10_c9.gif" width="654" height="441" border="0"
-                    id="colorir_r10_c9" alt="" />
+            <td rowspan="2" colspan="12" style="background-color: White; text-align: justify; vertical-align: top;"
+                align="justify" valign="top">
+                <div id="textoCorpo">
+                    <asp:ContentPlaceHolder ID="MenuCorpo" runat="server">
+                    </asp:ContentPlaceHolder>
+                </div>
             </td>
             <td colspan="2">
                 <img name="colorir_r10_c21" src="images/colorir_r10_c21.gif" width="40" height="201" border="0"
