--- a/LeComCre.Web/LeComCre.Web/MasterAnunciar.master
+++ b/LeComCre.Web/LeComCre.Web/MasterAnunciar.master
@@ -2,6 +2,14 @@
     Inherits="LeComCre.Web.MasterAnunciar" %>
 
 <asp:Content ID="Content1" ContentPlaceHolderID="headPortal" runat="server">
+    <style type="text/css">
+        body
+        {
+            background-color: #F5E0FF;
+        }
+    </style>
+    <asp:ContentPlaceHolder ID="MenuHead" runat="server">
+    </asp:ContentPlaceHolder>
 </asp:Content>
 <asp:Content ID="Content2" ContentPlaceHolderID="ContentPlaceHolderPortal" runat="server">
     <table style="display: inline-table;" border="0" cellpadding="0" cellspacing="0" width="1024">
