--- a/LeComCre.Web/LeComCre.Web/MasterColorir.master
+++ b/LeComCre.Web/LeComCre.Web/MasterColorir.master
@@ -267,7 +267,8 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">
+            <td colspan="2" style="background-image: url('images/colorir_r10_c1.gif'); background-repeat: repeat-y;
+                height: auto;">
                 <img name="colorir_r10_c1" src="images/colorir_r10_c1.gif" width="46" height="201" border="0"
                     id="colorir_r10_c1" alt="" />
             </td>
@@ -278,7 +279,8 @@
                     </asp:ContentPlaceHolder>
                 </div>
             </td>
-            <td>
+            <td style="background-image: url('images/colorir_r10_c8.gif'); background-repeat: repeat-y;
+                height: auto;">
                 <img name="colorir_r10_c8" src="images/colorir_r10_c8.gif" width="53" height="201" border="0"
                     id="colorir_r10_c8" alt="" />
             </td>
@@ -289,7 +291,8 @@
                     </asp:ContentPlaceHolder>
                 </div>
             </td>
-            <td colspan="2">
+            <td colspan="2" style="background-image: url('images/colorir_r10_c21.gif'); background-repeat: repeat-y;
+                height: auto;">
                 <img name="colorir_r10_c21" src="images/colorir_r10_c21.gif" width="40" height="201" border="0"
                     id="colorir_r10_c21" alt="" />
             </td>
@@ -298,15 +301,18 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">
+            <td colspan="2" style="background-image: url('images/colorir_r11_c1.gif'); background-repeat: repeat-y;
+                height: auto;">
                 <img name="colorir_r11_c1" src="images/colorir_r11_c1.gif" width="46" height="240" border="0"
                     id="colorir_r11_c1" alt="" />
             </td>
-            <td>
+            <td style="background-image: url('images/colorir_r11_c8.gif'); background-repeat: repeat-y;
+                height: auto;">
                 <img name="colorir_r11_c8" src="images/colorir_r11_c8.gif" width="53" height="240" border="0"
                     id="colorir_r11_c8" alt="" />
             </td>
-            <td colspan="2">
+            <td colspan="2" style="background-image: url('images/colorir_r11_c21.gif'); background-repeat: repeat-y;
+                height: auto;">
                 <img name="colorir_r11_c21" src="images/colorir_r11_c21.gif" width="40" height="240" border="0"
                     id="colorir_r11_c21" alt="" />
             </td>
